<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="buttonZero">0</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonPoint">.</string>
    <string name="buttonDivide">/</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonEquals">=</string>
    <string name="diplay">0</string>
    <string name="buttonReset">RESET</string>
    
</resources>